--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,12 @@ before_script:
  - composer install
 
 script:
+ - vendor/bin/php-cs-fixer fix --verbose --diff --dry-run --config-file=.php_cs.php
  - php ./vendor/bin/phpunit -c phpunit.xml.dist
- 
+
+cache:
+  directories:
+    - vendor
+    - $HOME/.composer/cache/files
+    - $HOME/.php-cs-fixer
+
