--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_script:
  - composer install
 
 script:
- - vendor/bin/php-cs-fixer fix --verbose --diff --dry-run --config-file=.php_cs.php
+ - vendor/bin/php-cs-fixer fix --verbose --diff --dry-run --config=.php_cs.php
  - php ./vendor/bin/phpunit -c phpunit.xml.dist
 
 cache:
