--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^6.1",
-        "fabpot/php-cs-fixer": "^2.3"
+        "fabpot/php-cs-fixer": "^2.3",
+        "symfony/yaml": "^3.2"
     }
 }
