--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "tests\\": "tests/"
+            "Enrise\\Maparea\\tests\\": "tests/"
         }
     },
     "require": {
@@ -34,7 +34,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^6.1",
-        "fabpot/php-cs-fixer": "^2.3",
+        "friendsofphp/php-cs-fixer": "^2.3",
         "symfony/yaml": "^3.2"
     }
 }
