--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,11 @@
             "Enrise\\Maparea\\": "src/Enrise/Maparea"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Enrise\\Maparea\\tests\\": "tests/"
+        }
+    },
     "require": {
         "php": "^7.0",
         "mtdowling/jmespath.php": "^2.4"
@@ -29,7 +34,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^6.1",
-        "fabpot/php-cs-fixer": "^2.3",
+        "friendsofphp/php-cs-fixer": "^2.3",
         "symfony/yaml": "^3.2"
     }
 }
